intel/bench_25/extr_stbtestsstblib_test.c_main/log.txt
bench_25/extr_stbtestsstblib_test.c_main/extr_stbtestsstblib_test.c_main.c:7:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
